@@ -1,26 +1,24 @@
 /*
- * Copyright (c) 2017-2018 Bosch Software Innovations GmbH.
+ * Copyright (c) 2017 Contributors to the Eclipse Foundation
  *
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v2.0
- * which accompanies this distribution, and is available at
- * https://www.eclipse.org/org/documents/epl-2.0/index.php
+ * See the NOTICE file(s) distributed with this work for additional
+ * information regarding copyright ownership.
+ *
+ * This program and the accompanying materials are made available under the
+ * terms of the Eclipse Public License 2.0 which is available at
+ * http://www.eclipse.org/legal/epl-2.0
  *
  * SPDX-License-Identifier: EPL-2.0
  */
 package org.eclipse.ditto.services.thingsearch.persistence;
 
-import static org.eclipse.ditto.services.thingsearch.persistence.PersistenceConstants.POLICIES_BASED_SEARCH_INDEX_COLLECTION_NAME;
-import static org.eclipse.ditto.services.thingsearch.persistence.PersistenceConstants.THINGS_COLLECTION_NAME;
-import static org.eclipse.ditto.services.thingsearch.persistence.PersistenceConstants.THINGS_SYNC_STATE_COLLECTION_NAME;
-
-import java.util.Arrays;
+import java.time.Duration;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
-import java.util.concurrent.ExecutionException;
+
+import javax.annotation.Nullable;
 
 import org.bson.Document;
 import org.eclipse.ditto.model.query.Query;
@@ -29,22 +27,20 @@ import org.eclipse.ditto.model.query.criteria.CriteriaFactory;
 import org.eclipse.ditto.model.query.criteria.CriteriaFactoryImpl;
 import org.eclipse.ditto.model.query.expression.ThingsFieldExpressionFactory;
 import org.eclipse.ditto.model.query.expression.ThingsFieldExpressionFactoryImpl;
-import org.eclipse.ditto.model.things.Thing;
-import org.eclipse.ditto.services.base.config.DittoLimitsConfigReader;
+import org.eclipse.ditto.model.things.ThingId;
+import org.eclipse.ditto.services.base.config.limits.DefaultLimitsConfig;
 import org.eclipse.ditto.services.thingsearch.common.model.ResultList;
-import org.eclipse.ditto.services.thingsearch.persistence.read.AggregationBuilderFactory;
 import org.eclipse.ditto.services.thingsearch.persistence.read.MongoThingsSearchPersistence;
-import org.eclipse.ditto.services.thingsearch.persistence.read.PolicyRestrictedSearchAggregation;
-import org.eclipse.ditto.services.thingsearch.persistence.read.query.MongoAggregationBuilderFactory;
 import org.eclipse.ditto.services.thingsearch.persistence.read.query.MongoQueryBuilderFactory;
-import org.eclipse.ditto.services.thingsearch.persistence.write.impl.MongoEventToPersistenceStrategyFactory;
-import org.eclipse.ditto.services.thingsearch.persistence.write.impl.MongoThingsSearchUpdaterPersistence;
+import org.eclipse.ditto.services.thingsearch.persistence.write.streaming.TestSearchUpdaterStream;
+import org.eclipse.ditto.services.utils.persistence.mongo.DittoMongoClient;
 import org.eclipse.ditto.services.utils.persistence.mongo.MongoClientWrapper;
 import org.eclipse.ditto.services.utils.test.mongo.MongoDbResource;
 import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.Before;
 import org.junit.BeforeClass;
+import org.junit.ClassRule;
 
 import com.mongodb.reactivestreams.client.MongoCollection;
 import com.typesafe.config.Config;
@@ -53,8 +49,8 @@ import com.typesafe.config.ConfigFactory;
 import akka.NotUsed;
 import akka.actor.ActorSystem;
 import akka.event.LoggingAdapter;
-import akka.stream.ActorMaterializer;
 import akka.stream.Materializer;
+import akka.stream.SystemMaterializer;
 import akka.stream.javadsl.Sink;
 import akka.stream.javadsl.Source;
 import akka.testkit.javadsl.TestKit;
@@ -65,93 +61,74 @@ import akka.testkit.javadsl.TestKit;
  */
 public abstract class AbstractThingSearchPersistenceITBase {
 
+    @ClassRule
+    public static final MongoDbResource MONGO_RESOURCE = new MongoDbResource();
+
     protected static final List<String> KNOWN_SUBJECTS = Collections.singletonList("abc:mySid");
-    protected static final List<String> KNOWN_SUBJECTS_2 = Arrays.asList("some:mySid", "some:unknown");
-    protected static final String KNOWN_ATTRIBUTE_1 = "attribute1";
-    protected static final String KNOWN_NEW_VALUE = "newValue";
 
     protected static final CriteriaFactory cf = new CriteriaFactoryImpl();
     protected static final ThingsFieldExpressionFactory fef = new ThingsFieldExpressionFactoryImpl();
-    protected static final QueryBuilderFactory qbf = new MongoQueryBuilderFactory
-            (DittoLimitsConfigReader.fromRawConfig(ConfigFactory.load("test")));
-    protected static final AggregationBuilderFactory abf = new MongoAggregationBuilderFactory
-            (DittoLimitsConfigReader.fromRawConfig(ConfigFactory.load("test")));
-    private static MongoDbResource mongoResource;
-    private static MongoClientWrapper mongoClient;
-    /** */
-    private MongoThingsSearchPersistence readPersistence;
+
+    protected static QueryBuilderFactory qbf;
+
+    private static DittoMongoClient mongoClient;
+
     private MongoCollection<Document> thingsCollection;
-    private MongoCollection<Document> policiesCollection;
-    private MongoCollection<Document> syncCollection;
-    protected MongoThingsSearchUpdaterPersistence writePersistence;
+    protected MongoThingsSearchPersistence readPersistence;
+    protected TestSearchUpdaterStream writePersistence;
 
-
-    private ActorSystem actorSystem;
-    private ActorMaterializer actorMaterializer;
+    protected ActorSystem actorSystem;
     protected LoggingAdapter log;
 
     @BeforeClass
     public static void startMongoResource() {
-        mongoResource = new MongoDbResource("localhost");
-        mongoResource.start();
+        final Config rawTestConfig = ConfigFactory.load("test");
+        final DefaultLimitsConfig limitsConfig = DefaultLimitsConfig.of(rawTestConfig.getConfig("ditto"));
+        qbf = new MongoQueryBuilderFactory(limitsConfig);
         mongoClient = provideClientWrapper();
     }
 
-    /** */
     @Before
     public void before() {
         final Config config = ConfigFactory.load("test");
         actorSystem = ActorSystem.create("AkkaTestSystem", config);
         log = actorSystem.log();
-        actorMaterializer = ActorMaterializer.create(actorSystem);
         readPersistence = provideReadPersistence();
         writePersistence = provideWritePersistence();
-        thingsCollection = mongoClient.getDatabase().getCollection(THINGS_COLLECTION_NAME);
-        policiesCollection = mongoClient.getDatabase().getCollection(POLICIES_BASED_SEARCH_INDEX_COLLECTION_NAME);
-        syncCollection = mongoClient.getDatabase().getCollection(THINGS_SYNC_STATE_COLLECTION_NAME);
+        thingsCollection = mongoClient.getDefaultDatabase().getCollection(PersistenceConstants.THINGS_COLLECTION_NAME);
     }
 
     private MongoThingsSearchPersistence provideReadPersistence() {
-        final MongoThingsSearchPersistence mongoThingsSearchPersistence =
-                new MongoThingsSearchPersistence(provideClientWrapper(), actorSystem);
-        try {
-            // explicitly trigger CompletableFuture to make sure that indices are created before test runs
-            mongoThingsSearchPersistence.initializeIndices().toCompletableFuture().get();
-        } catch (final InterruptedException | ExecutionException e) {
-            throw new IllegalStateException(e);
-        }
-        return mongoThingsSearchPersistence;
+        final MongoThingsSearchPersistence result = new MongoThingsSearchPersistence(mongoClient, actorSystem);
+        // explicitly trigger CompletableFuture to make sure that indices are created before test runs
+        result.initializeIndices().toCompletableFuture().join();
+        return result;
     }
 
-    private MongoThingsSearchUpdaterPersistence provideWritePersistence() {
-        final MongoThingsSearchUpdaterPersistence mongoThingsSearchUpdaterPersistence =
-                new MongoThingsSearchUpdaterPersistence(mongoClient, log,
-                        MongoEventToPersistenceStrategyFactory.getInstance(), getMaterializer());
-        try {
-            // explicitly trigger CompletableFuture to make sure that indices are created before test runs
-            mongoThingsSearchUpdaterPersistence.initializeIndices().toCompletableFuture().get();
-        } catch (final InterruptedException | ExecutionException e) {
-            throw new IllegalStateException(e);
-        }
-        return mongoThingsSearchUpdaterPersistence;
+    private TestSearchUpdaterStream provideWritePersistence() {
+        return TestSearchUpdaterStream.of(mongoClient.getDefaultDatabase());
     }
 
-    private static MongoClientWrapper provideClientWrapper() {
-        return MongoClientWrapper.newInstance(mongoResource.getBindIp(), mongoResource.getPort(), "testSearchDB",
-                100, 500000, 30);
+    private static DittoMongoClient provideClientWrapper() {
+        return MongoClientWrapper.getBuilder()
+                .connectionString(
+                        "mongodb://" + MONGO_RESOURCE.getBindIp() + ":" + MONGO_RESOURCE.getPort() + "/testSearchDB")
+                .connectionPoolMaxSize(100)
+                .connectionPoolMaxWaitTime(Duration.ofSeconds(30))
+                .build();
     }
 
-    /** */
+
     @After
     public void after() {
         if (mongoClient != null) {
-            dropCollections(Arrays.asList(thingsCollection, policiesCollection, syncCollection));
+            dropCollections(List.of(thingsCollection));
         }
         if (actorSystem != null) {
             TestKit.shutdownActorSystem(actorSystem);
             actorSystem = null;
             log = null;
-            actorMaterializer = null;
+            actorSystem = null;
         }
     }
 
@@ -179,10 +156,7 @@ public abstract class AbstractThingSearchPersistenceITBase {
     public static void stopMongoResource() {
         try {
             if (mongoClient != null) {
-                mongoClient.getMongoClient().close();
-            }
-            if (mongoResource != null) {
-                mongoResource.stop();
+                mongoClient.close();
             }
         } catch (final IllegalStateException e) {
             System.err.println("IllegalStateException during shutdown of MongoDB: " + e.getMessage());
@@ -190,128 +164,52 @@ public abstract class AbstractThingSearchPersistenceITBase {
     }
 
     protected Long count(final Query query) {
-        try {
-            return readPersistence.count(query) //
-                    .limit(1) //
-                    .runWith(Sink.seq(), actorMaterializer) //
-                    .toCompletableFuture() //
-                    .get() //
-                    .get(0);
-        } catch (final InterruptedException | ExecutionException e) {
-            throw mapAsRuntimeException(e);
-        }
+        return count(query, KNOWN_SUBJECTS);
     }
 
-    protected long aggregateCount(final PolicyRestrictedSearchAggregation policyRestrictedSearchAggregation) {
-        try {
-            return readPersistence.count(policyRestrictedSearchAggregation) //
-                    .runWith(Sink.seq(), actorMaterializer) //
-                    .toCompletableFuture() //
-                    .get() //
-                    .get(0);
-        } catch (final InterruptedException | ExecutionException e) {
-            throw mapAsRuntimeException(e);
-        }
+    protected Long count(final Query query, @Nullable final List<String> subjectIds) {
+        return readPersistence.count(query, subjectIds)
+                .runWith(Sink.head(), actorSystem)
+                .toCompletableFuture()
+                .join();
     }
 
-    protected ResultList<String> findAll(final PolicyRestrictedSearchAggregation policyRestrictedSearchAggregation) {
-        return waitFor(readPersistence.findAll(policyRestrictedSearchAggregation)).get(0);
+    protected ResultList<ThingId> findAll(final Query query) {
+        return findAll(query, KNOWN_SUBJECTS);
     }
 
-    protected ResultList<String> findAll(final Query query) {
-        try {
-            return readPersistence.findAll(query) //
-                    .limit(1) //
-                    .runWith(Sink.seq(), actorMaterializer) //
-                    .toCompletableFuture() //
-                    .get() //
-                    .get(0);
-        } catch (final InterruptedException | ExecutionException e) {
-            throw mapAsRuntimeException(e);
-        }
-    }
-
-    protected void runBlocking(final Source<?, NotUsed> publisher) {
-        final List<Source<?, NotUsed>> publishers = Collections.singletonList(publisher);
-
-        runBlocking(publishers);
-    }
-
-    protected void runBlocking(final List<Source<?, NotUsed>> publishers) {
-        publishers.stream()
-                .map(p -> p.runWith(Sink.ignore(), actorMaterializer))
-                .map(CompletionStage::toCompletableFuture)
-                .forEach(this::finishCompletableFuture);
-    }
-
-    private void finishCompletableFuture(final CompletableFuture future) {
-        try {
-            future.get();
-        } catch (final InterruptedException | ExecutionException e) {
-            throw mapAsRuntimeException(e);
-        }
+    protected ResultList<ThingId> findAll(final Query query, final List<String> subjectIds) {
+        return readPersistence.findAll(query, subjectIds)
+                .runWith(Sink.head(), actorSystem)
+                .toCompletableFuture()
+                .join();
     }
 
     protected <T> T runBlockingWithReturn(final Source<T, NotUsed> publisher) {
-        final CompletionStage<T> done = publisher.runWith(Sink.last(), actorMaterializer);
-        try {
-            return done.toCompletableFuture().get();
-        } catch (final InterruptedException | ExecutionException e) {
-            throw mapAsRuntimeException(e);
-        }
+        final CompletionStage<T> done = publisher.runWith(Sink.last(), actorSystem);
+        return done.toCompletableFuture().join();
     }
 
-    private static RuntimeException mapAsRuntimeException(final Throwable t) {
-        // shortcut: RTEs can be returned as-is
-        if (t instanceof RuntimeException) {
-            return (RuntimeException) t;
-        }
-
-        // for ExecutionExceptions, extract the cause
-        if (t instanceof ExecutionException && t.getCause() != null) {
-            return mapAsRuntimeException(t.getCause());
-        }
-
-        // wrap non-RTEs as IllegalStateException
-        return new IllegalStateException(t);
-    }
-
-    protected void insertOrUpdateThing(final Thing thing, final long revision, final long policyRevision) {
-        runBlocking(writePersistence.insertOrUpdate(thing, revision, policyRevision));
-    }
-
-    protected void delete(final String thingId, final long revision) {
-        runBlocking(writePersistence.delete(thingId, revision));
-    }
-
-    protected final MongoClientWrapper getClient() {
+    protected final DittoMongoClient getClient() {
         return mongoClient;
     }
 
-    protected final Materializer getMaterializer() {
-        return actorMaterializer;
+    final Materializer getMaterializer() {
+        return SystemMaterializer.get(actorSystem).materializer();
     }
 
-    private <T> List<T> waitFor(final Source<T, ?> source) {
-        try {
-            return source
-                    .limit(1) //
-                    .runWith(Sink.seq(), actorMaterializer) //
-                    .toCompletableFuture() //
-                    .get();
-
-        } catch (final InterruptedException | ExecutionException e) {
-            throw mapAsRuntimeException(e);
-        }
+    protected <T> List<T> waitFor(final Source<T, ?> source) {
+        return source.runWith(Sink.seq(), actorSystem)
+                .toCompletableFuture()
+                .join();
     }
 
     @SuppressWarnings("squid:S2925")
     private void backoff() {
         try {
             Thread.sleep(100);
-        } catch (final InterruptedException e) {
+        } catch (final Exception e) {
             // do nothing
         }
     }
-
 }
